--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chronos",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -17,6 +17,7 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
