--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@isoterik/react-word-cloud": "^1.2.0",
     "@types/uuid": "^10.0.0",
     "date-fns": "^4.1.0",
     "dexie": "^4.0.11",
